fixed border overlap

--- a/css/apps/mail/cmps/mail-filter.css
+++ b/css/apps/mail/cmps/mail-filter.css
@@ -43,7 +43,7 @@
 .mail-filter .sort-dropdown .dropdown-content {
 	display: none;
 	background-color: var(--off-white);
-	border-inline: 1px solid var(--black);
+	border: 1px solid var(--black);
 	border-radius: 1.6em;
 }
 
@@ -51,7 +51,7 @@
 	display: block;
 	position: absolute;
 	z-index: 10;
-	transform: translateY(-25%);
+	transform: translateY(-26%);
 }
 
 .sort-dropdown .dropdown-content > * {
@@ -59,15 +59,17 @@
 	width: 100%;
 	text-align: center;
 	padding: 0.5em 2.9em;
-	border-bottom: 1px solid var(--black);
 }
 
 .sort-dropdown .dropdown-content > *:first-child {
-	border-top: 1px solid var(--black);
 	border-radius: 1.6em 1.6em 0 0;
 }
 .sort-dropdown .dropdown-content > *:last-child {
 	border-radius: 0 0 1.6em 1.6em;
+}
+
+.sort-dropdown .dropdown-content > *:not(:last-child) {
+	border-bottom: 1px solid var(--black);
 }
 
 .sort-dropdown .dropdown-content > *:hover {
