--- a/css/apps/mail/mq/mq.css
+++ b/css/apps/mail/mq/mq.css
@@ -30,7 +30,7 @@
 
 	.side-bar {
 		width: 16em;
-		position: fixed;
+		position: absolute;
 		transform: translate(-100%, -2em);
 		padding-top: 2em;
 		z-index: 30;
